--- a/.github/workflows/Deploy-to-Render.yml
+++ b/.github/workflows/Deploy-to-Render.yml
@@ -1,16 +1,14 @@
-name: My Deploy
+name: Deploy to Render
 
 on:
   push:
     branches: [ main ]
-  pull_request:
-    branches: [ main ]
 
 jobs:
-  build:
+  deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Deploy to production
+      - name: Trigger Render Deploy
         uses: johnbeynon/render-deploy-action@v0.0.8
         with:
           service-id: ${{ secrets.SERVICE_ID }}
